:iphone: [HOME] Fix title on mobile

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -77,3 +77,10 @@ html {
     font-family: 'Cinderblock-100', sans-serif;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .ts-title {
+    font-size: 17vw;
+    line-height: 14vw;
+  }
+}
